test-package-compiler/tests/snapshots/compiler_tests__cascades_parser.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
AST:
Module {
    classes: [],
    method_definitions: [],
    protocols: [],
    type_aliases: [],
    native_declarations: [],
    expressions: [
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [
                    Comment {
                        content: "Copyright 2026 James Casey",
                        span: Span {
                            start: 208,
                            end: 218,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "SPDX-License-Identifier: Apache-2.0",
                        span: Span {
                            start: 208,
                            end: 218,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "Test cascade message sends",
                        span: Span {
                            start: 208,
                            end: 218,
                        },
                        kind: Line,
                        preceding_blank_line: true,
                    },
                    Comment {
                        content: "Sends multiple messages to the same receiver",
                        span: Span {
                            start: 208,
                            end: 218,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "Method that uses a cascade - all messages go to counter",
                        span: Span {
                            start: 208,
                            end: 218,
                        },
                        kind: Line,
                        preceding_blank_line: true,
                    },
                ],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: Assignment {
                target: Identifier(
                    Identifier {
                        name: "runCascade",
                        span: Span {
                            start: 208,
                            end: 218,
                        },
                    },
                ),
                value: Block(
                    Block {
                        parameters: [],
                        body: [
                            ExpressionStatement {
                                comments: CommentAttachment {
                                    leading: [],
                                    trailing: None,
                                    leading_blank_line: false,
                                    blank_line_after_comments: false,
                                },
                                expression: Cascade {
                                    receiver: MessageSend {
                                        receiver: Identifier(
                                            Identifier {
                                                name: "counter",
                                                span: Span {
                                                    start: 223,
                                                    end: 230,
                                                },
                                            },
                                        ),
                                        selector: Unary(
                                            "increment",
                                        ),
                                        arguments: [],
                                        is_cast: false,
                                        span: Span {
                                            start: 223,
                                            end: 240,
                                        },
                                    },
                                    messages: [
                                        CascadeMessage {
                                            selector: Unary(
                                                "increment",
                                            ),
                                            arguments: [],
                                            span: Span {
                                                start: 242,
                                                end: 251,
                                            },
                                        },
                                        CascadeMessage {
                                            selector: Unary(
                                                "getValue",
                                            ),
                                            arguments: [],
                                            span: Span {
                                                start: 253,
                                                end: 261,
                                            },
                                        },
                                    ],
                                    span: Span {
                                        start: 223,
                                        end: 261,
                                    },
                                },
                                preceding_blank_line: false,
                            },
                        ],
                        span: Span {
                            start: 222,
                            end: 262,
                        },
                    },
                ),
                type_annotation: None,
                span: Span {
                    start: 208,
                    end: 262,
                },
            },
            preceding_blank_line: false,
        },
    ],
    span: Span {
        start: 208,
        end: 262,
    },
    file_leading_comments: [],
    file_trailing_comments: [],
}
