test-package-compiler/tests/snapshots/compiler_tests__character_literals_parser.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
AST:
Module {
    classes: [],
    method_definitions: [],
    protocols: [],
    type_aliases: [],
    native_declarations: [],
    expressions: [
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [
                    Comment {
                        content: "Copyright 2026 James Casey",
                        span: Span {
                            start: 180,
                            end: 187,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "SPDX-License-Identifier: Apache-2.0",
                        span: Span {
                            start: 180,
                            end: 187,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "Test character literal codegen - $a compiles to integer codepoint",
                        span: Span {
                            start: 180,
                            end: 187,
                        },
                        kind: Line,
                        preceding_blank_line: true,
                    },
                    Comment {
                        content: "===== Basic Character Literals =====",
                        span: Span {
                            start: 180,
                            end: 187,
                        },
                        kind: Line,
                        preceding_blank_line: true,
                    },
                ],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: Assignment {
                target: Identifier(
                    Identifier {
                        name: "letterA",
                        span: Span {
                            start: 180,
                            end: 187,
                        },
                    },
                ),
                value: Literal(
                    Character(
                        'A',
                    ),
                    Span {
                        start: 191,
                        end: 193,
                    },
                ),
                type_annotation: None,
                span: Span {
                    start: 180,
                    end: 193,
                },
            },
            preceding_blank_line: false,
        },
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: Assignment {
                target: Identifier(
                    Identifier {
                        name: "letterZ",
                        span: Span {
                            start: 194,
                            end: 201,
                        },
                    },
                ),
                value: Literal(
                    Character(
                        'z',
                    ),
                    Span {
                        start: 205,
                        end: 207,
                    },
                ),
                type_annotation: None,
                span: Span {
                    start: 194,
                    end: 207,
                },
            },
            preceding_blank_line: false,
        },
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: Assignment {
                target: Identifier(
                    Identifier {
                        name: "digit",
                        span: Span {
                            start: 208,
                            end: 213,
                        },
                    },
                ),
                value: Literal(
                    Character(
                        '0',
                    ),
                    Span {
                        start: 217,
                        end: 219,
                    },
                ),
                type_annotation: None,
                span: Span {
                    start: 208,
                    end: 219,
                },
            },
            preceding_blank_line: false,
        },
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [
                    Comment {
                        content: "===== Character Comparison =====",
                        span: Span {
                            start: 257,
                            end: 264,
                        },
                        kind: Line,
                        preceding_blank_line: true,
                    },
                ],
                trailing: None,
                leading_blank_line: true,
                blank_line_after_comments: false,
            },
            expression: Assignment {
                target: Identifier(
                    Identifier {
                        name: "isEqual",
                        span: Span {
                            start: 257,
                            end: 264,
                        },
                    },
                ),
                value: Literal(
                    Character(
                        'A',
                    ),
                    Span {
                        start: 268,
                        end: 270,
                    },
                ),
                type_annotation: None,
                span: Span {
                    start: 257,
                    end: 270,
                },
            },
            preceding_blank_line: true,
        },
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: Error {
                message: "Unexpected token: expected expression, found =",
                span: Span {
                    start: 271,
                    end: 272,
                },
            },
            preceding_blank_line: false,
        },
    ],
    span: Span {
        start: 180,
        end: 432,
    },
    file_leading_comments: [],
    file_trailing_comments: [],
}

Diagnostics:
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found =", span: Span { start: 271, end: 272 }, hint: Some("'=' is not an operator in Beamtalk; use '=:=' for value equality or '==' for reference equality"), category: None, notes: [], provision: None }
